@@ -1,1 +1,1 @@
-\data
+*.vng
